# ipm

./: README.md  pyproject.toml
.github/workflows/: test.yml
coc/src/: __init__.py  handlers.py
examples/: .gitignore  infini.toml  pyproject.toml
examples/example/: .gitignore  README.md  infini.toml  pyproject.toml
examples/example/src/: interceptors.py
examples/src/: __init__.py  events.py  handlers.py  interceptors.py
src/ipm/: __init__.py  __main__.py  api.py  const.py  exceptions.py  logging.py  typing.py
src/ipm/models/: index.py  ipk.py  lock.py  requirement.py
src/ipm/project/: env.py  toml_file.py
src/ipm/utils/: _freeze.py  freeze.py  git.py  hash.py  loader.py  resolve.py  urlparser.py  uuid.py  version.py
test/: infini.toml
test/src/: __init__.py
tests/: test-api.py  test_api.py  test_cli.py
