[project]
name = "ipdm"
version = "0.1.1"
description = "Infini 包管理器"
authors = [
    { name = "苏向夜", email = "fu050409@163.com" },
    { name = "简律纯", email = "leader@hydroroll.team" },
]
dependencies = [
    "typer>=0.9.0",
    "toml>=0.10.2",
    "requests>=2.31.0",
    "rich>=13.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ipm = "ipm.__main__:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
]
