[project]
name = "ipdm"
version = "0.2.0-alpha.11"
description = "Infini 包管理器"
authors = [
    { name = "苏向夜", email = "fu050409@163.com" },
    { name = "简律纯", email = "leader@hydroroll.team" },
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "infini>=2.1.6",
    "tomlkit>=0.12.4",
    "virtualenv>=20.25.1",
    "gitpython>=3.1.42",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ipm = "ipm.__main__:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
]
