[project]
name = "example"
version = "0.1.0"
description = "示例规则包"
authors = [
    {name = "fu050409",email = "fu050409@163.com"},
]
license = {text = "AGPLv3"}
dependencies = ["infini>2.1.0"]
requires-python = ">=3.8"
readme = "README.md"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest"]
